--- a/Firmware.tex
+++ b/Firmware.tex
@@ -309,23 +309,23 @@ Beim Konzept Sicherheitsmaßnahmen geht es grundsätzlich um die Sicherheit von 
 
 \hline \#   & \textbf{Bezeichnung}                                                                                               & \textbf{Fehler}                                                                                                                & \textbf{Beschreibung}                                                                                                                    & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
  1          & Mensch in unmittelbarer Nähe                                                                              & Mensch wird verletzt, da Hexacopter nicht ausweicht                                                                   & Eine Person steht auf dem Weg und wird vom Hexacopter als Hindernis erkannt                                                     & 5   & 10  & 10  & 500 \\
-\hline -    & \textbf{Vermeidung}                                                                                                & \textbf{Maßnahme nach Eintritt}                                                                                                & \textbf{Mögliche Softwarelösung}                                                                                                         & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
- -          & Wege absperren, Menschen darauf hinweisen, sich nicht in unmittelbarer Nähe des Hexacopters aufzuhalten.  & Hexacopter landet auf der Stelle um die Sicherheit der Person zu gewährleisten.                                       & Durch 2 Ultraschallsensoren, die vorne am Hexacopter angebracht sind, werden Menschen erkannt, er landet daraufhin.             & 2   & 10  & 5   & 100 \\\hline
+\hline     & \textbf{Vermeidung}                                                                                                & \textbf{Maßnahme nach Eintritt}                                                                                                & \textbf{Mögliche Softwarelösung}                                                                                                         & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
+          & Wege absperren, Menschen darauf hinweisen, sich nicht in unmittelbarer Nähe des Hexacopters aufzuhalten.  & Hexacopter landet auf der Stelle um die Sicherheit der Person zu gewährleisten.                                       & Durch 2 Ultraschallsensoren, die vorne am Hexacopter angebracht sind, werden Menschen erkannt, er landet daraufhin.             & 2   & 10  & 5   & 100 \\\hline
 
 \hline \#   & \textbf{Bezeichnung}                                                                                               & \textbf{Fehler}                                                                                                                & \textbf{Beschreibung}                                                                                                                    & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
  2          & Ein unbewegliches Hindernis befindet sich in unmittelbarer Nähe.                                          & Hexacopter fliegt gegen ein unbewegliches Hindernis und stürzt ab.                                                    & Eine Wand oder ein ähnliches unbewegliches Hindernis befindet sich in unmittelbarer Nähe.                                       & 5   & 7   & 9   & 315 \\
-\hline -    & \textbf{Vermeidung}                                                                                                & \textbf{Maßnahme nach Eintritt}                                                                                                & \textbf{Mögliche Softwarelösung}                                                                                                         & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
- -          & Farbcodes werden nicht in der Nähe von unbeweglichen Hindernissen platziert.                              & Der Hexacopter landet, da er nicht zwischen Mensch, beweglichen und unbeweglichen Hindernissen unterscheiden kann.    & Der Hexacopter darf nur über Farbcodes fliegen, dadurch wird vermieden, dass der Hexacopter in die Nähe dieser Objekte kommt.   & 1   & 7   & 5   & 35  \\\hline
+\hline     & \textbf{Vermeidung}                                                                                                & \textbf{Maßnahme nach Eintritt}                                                                                                & \textbf{Mögliche Softwarelösung}                                                                                                         & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
+          & Farbcodes werden nicht in der Nähe von unbeweglichen Hindernissen platziert.                              & Der Hexacopter landet, da er nicht zwischen Mensch, beweglichen und unbeweglichen Hindernissen unterscheiden kann.    & Der Hexacopter darf nur über Farbcodes fliegen, dadurch wird vermieden, dass der Hexacopter in die Nähe dieser Objekte kommt.   & 1   & 7   & 5   & 35  \\\hline
 
 \hline \#   & \textbf{Bezeichnung}                                                                                               & \textbf{Fehler}                                                                                                                & \textbf{Beschreibung}                                                                                                                    & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
  3          & Bewegliches Hindernis wird erkannt                                                                        & Hexacopter fliegt gegen ein Hindernis und stürzt ab                                                                   & Eine Hindernis wird erkannt.                                                                                                    & 3   & 6   & 10  & 180 \\
-\hline -    & \textbf{Vermeidung}                                                                                                & \textbf{Maßnahme nach Eintritt}                                                                                                & \textbf{Mögliche Softwarelösung}                                                                                                         & A   & B   & E   & RPZ \\
- -          & Bewegliche Hindernisse werden wenn möglich aus dem Weg geräumt.                                           & Hexacopter probiert dem Hindernis auszuweichen und seinen Weg weiter zu meistern.                                     & Durch 2 Ultraschallsensoren, die vorne am Hexacopter angebracht sind, werden Hindernisse erkannt, er landet daraufhin           & 2   & 6   & 5   & 60  \\\hline
+\hline     & \textbf{Vermeidung}                                                                                                & \textbf{Maßnahme nach Eintritt}                                                                                                & \textbf{Mögliche Softwarelösung}                                                                                                         & A   & B   & E   & RPZ \\
+           & Bewegliche Hindernisse werden wenn möglich aus dem Weg geräumt.                                           & Hexacopter probiert dem Hindernis auszuweichen und seinen Weg weiter zu meistern.                                     & Durch 2 Ultraschallsensoren, die vorne am Hexacopter angebracht sind, werden Hindernisse erkannt, er landet daraufhin           & 2   & 6   & 5   & 60  \\\hline
 
 \hline \#   & \textbf{Bezeichnung}                                                                                               & \textbf{Fehler}                                                                                                                & \textbf{Beschreibung}                                                                                                                    & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
  4          & Hände in der Nähe von den Propellern                                                                      & Person hat seine Hände beim fliegenden Hexacopter und verletzt sich                                                   & Eine Person greift in die Propeller.                                                                                            & 7   & 10  & 10  & 700 \\
-\hline -    & \textbf{Vermeidung}                                                                                                & \textbf{Maßnahme nach Eintritt}                                                                                                & \textbf{Mögliche Softwarelösung}                                                                                                         & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
- -          & Hexacopter wartet lang genug, dass man den Cupcake runternehmen kann. Propellerschutz ist angebracht.     & Hexacopter gibt über Display / LED / Ton aus, dass er wegfliegt.                                                      & Display / LED / Ton werden programmiert um Menschen beim Start zu warnen.                                                       & 1   & 10  & 5   & 50  \\\hline
+\hline     & \textbf{Vermeidung}                                                                                                & \textbf{Maßnahme nach Eintritt}                                                                                                & \textbf{Mögliche Softwarelösung}                                                                                                         & \textbf{A}   & \textbf{B}   & \textbf{E}   & \textbf{RPZ} \\
+           & Hexacopter wartet lang genug, dass man den Cupcake runternehmen kann. Propellerschutz ist angebracht.     & Hexacopter gibt über Display / LED / Ton aus, dass er wegfliegt.                                                      & Display / LED / Ton werden programmiert um Menschen beim Start zu warnen.                                                       & 1   & 10  & 5   & 50  \\\hline
  \caption{Fehlt noch}
 \end{longtable}
 %\end{table}
