--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -38,6 +38,7 @@ einen Server, beziehungsweise einer weiteren Anwendung kommuniziert.
 Die digitale Speisekarte ist indirekt die externe Steuereinheit des Multicopters, und zugleich die Komponente,
 die das System für den Einsatz in der Gastronomie auszeichnet. Sie automatisiert Vorgänge eines gastronomischen
 Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
+\pagebreak
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Ausgangssituation}
@@ -125,6 +126,8 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
       Die {Ambulance Drohne\cite{ambulancedrone}} ist ein Projekt, welches auf der TU Delft entwickelt wird. Das Besondere an dieser Drohne ist, dass sie einen eingebauten Defibrillator hat, welcher
       sich per Fernverbindung von einem Rettungshelfer bedienen lässt, obwohl dieser nicht anwesend ist. Die Ambulance Drohne fliegt mit einer Höchstgeschwindigkeit von bis zu
       100 Stundenkilometer und kann somit, in einem Notfall, schnell die Unfallstelle erreichen.
+
+      \pagebreak
 
       \item \textbf{Gimball}
 
@@ -225,18 +228,7 @@ Das gesamte für den 3D-Druck benötigte Material wurde gesponsert.
 \subsection*{LivingPhotos}
 {LivingPhotos\cite{livingphotos}} ermöglichte uns, unsere Internetauftritte durch professionelle Teamfotos und Portraits aufzuwerten.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Danksagung}
-In erster Linie möchten wir uns bei unseren beiden Hauptbetreuern Mag. Andreas Fink und DI Herbert Fleck für die
-Betreuung des gesamten Teams bedanken. Sowohl fachbezogene Ratschläge, als auch konstruktives Feedback wurden sehr
-geschätzt und haben viel zur erfolgreichen Umsetzung der Diplomarbeit beigetragen.
-
-Ebenfalls bedanken wir uns bei unseren Individualbetreuern DI August Hörandl, MMag. Florian Weiss und
-DI Franz Temper, die dem Projektteam als Ansprechpersonen für besondere Fragestellungen zur Seite gestanden
-sind.
-
-Nicht zuletzt möchten wir unseren Dank unseren Partnern und Sponsoren, ganz besonders der GRZ IT Center GmbH
-ausdrücken, da wir die Diplomarbeit nicht ohne die Unterstützung in diesem Rahmen umsetzen hätten können.
+\pagebreak
 
 \chapter{Projektmanagement}
 \renewcommand{\kapitelautor}{Autor: Markus Kaiser}
@@ -325,6 +317,8 @@ Zusammenfassung umformuliert worden.
 
   Das Ziel der Diplomarbeit ist es, dass das konzeptionierte System
   funktionsfähig umgesetzt ist.
+
+  \pagebreak
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Management-Methode}
