--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -367,6 +367,22 @@ DI Dr. Michael Pyerin
 
 EVO-tech GmbH
 
+
+\chapter*{Danksagung}
+
+\thispagestyle{fancy}
+
+In erster Linie möchten wir uns bei unseren beiden Hauptbetreuern Mag. Andreas Fink und DI Herbert Fleck für die
+Betreuung des gesamten Teams bedanken. Sowohl fachbezogene Ratschläge, als auch konstruktives Feedback wurden sehr
+geschätzt und haben viel zur erfolgreichen Umsetzung der Diplomarbeit beigetragen.
+
+Ebenfalls bedanken wir uns bei unseren Individualbetreuern DI August Hörandl, MMag. Florian Weiss und
+DI Franz Temper, die dem Projektteam als Ansprechpersonen für besondere Fragestellungen zur Seite gestanden
+sind.
+
+Nicht zuletzt möchten wir unseren Dank unseren Partnern und Sponsoren, ganz besonders der GRZ IT Center GmbH
+ausdrücken, da wir die Diplomarbeit nicht ohne die Unterstützung in diesem Rahmen umsetzen hätten können.
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Verzeichnisse -- machen wir mit fancy headern
 \renewcommand*{\chapterpagestyle}{fancy}
