--- a/Marketing.tex
+++ b/Marketing.tex
@@ -26,18 +26,22 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     \subsection*{Die vier Strategien:}
     \begin{itemize}
       \item \textbf{SO-Strategie}
+
       Die Stärken des Unternehmens werden hervorgehoben und mit den Möglichkeiten verknüpft. Macht ein Unternehmen beispielsweise hohe Umsätze in Industrieländern und hat
       genügend finanzielle Mittel, wird expandiert und ein neuer Standort in einem weiteren Industrieland aufgebaut.
 
       \item \textbf{ST-Strategie}
+
       Auch hier werden die Stärken des Unternehmens genutzt, allerdings um bestehende Risiken einzuschränken oder zu entfernen. Besteht die Gefahr, dass die Konkurrenz
       einen höheren Marktanteil erlangt, kann das Unternehmen beispielsweise durch eine sehr gute Marketingabteilung neue Produkte herstellen, die dies verhindern.
 
       \item \textbf{WO-Strategie}
+
       Hierbei wird versucht, die Schwächen eines Unternehmens als Chance zu sehen sich weiterzuentwickeln. Erzielt ein gewisses Produkt nicht die erwarteten Gewinne,
       können durch neue Lösungsansätze neue Erfahrungen gewonnen werden, die nach Erfolg auch auf andere Produkte angewendet werden können.
 
       \item \textbf{WT-Strategie}
+
       Die Schwächen des Unternehmens werden näher betrachtet, um beim Versuch diese zu dezimieren, gleichzeitig Risiken einzugrenzen. Diese Strategie kann sehr hilfreich
       sein, wenn das Unternehmen sich auf dem Markt schwer über Wasser halten kann.
     \end{itemize}
@@ -260,7 +264,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
       \item CakePHP
     \end{itemize}
 
-    Die Wahl fiel auf CodeIgniter, die Begründung dafür ist in Kapitel 1.3.6 angeführt.
+    Die Wahl fiel auf CodeIgniter, die Begründung dafür ist in Kapitel 3.3.5 angeführt.
 
   \subsection{Umsetzung}
 
@@ -293,23 +297,25 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
       Beispiel JavaScript:
 
       \lstset{language=html}
-      	\begin{lstlisting}
-          /**
-           * Liefert alle <li> Elemente, die sich in einem Element mit der ID "navbar-list" befinden.
-          **/
-          var list = document.getElementById("navbar-list");
-          var items = list.querySelectorAll("li");
-      	\end{lstlisting}
+    	\begin{lstlisting}
+      /**
+       * Liefert alle <li> Elemente, die sich in einem Element
+       * mit der ID "navbar-list" befinden.
+      **/
+      var list = document.getElementById("navbar-list");
+      var items = list.querySelectorAll("li");
+      \end{lstlisting}
 
       Beispiel: jQuery:
 
       \lstset{language=html}
-      	\begin{lstlisting}
-          /**
-           * Liefert alle <li> Elemente, die sich in einem Element mit der ID "navbar-list" befinden.
-          **/
-          var items = $("#navbar-list li");
-      	\end{lstlisting}
+    	\begin{lstlisting}
+      /**
+       * Liefert alle <li> Elemente, die sich in einem Element
+       * mit der ID "navbar-list" befinden.
+      **/
+      var items = $("#navbar-list li");
+    	\end{lstlisting}
 
       Eine derzeit weit verbreitetes JavaScript Framework ist {AngularJS\cite{angular}}. Die Intention dieses Frameworks ist die Automatisierung von oft verwendeten Vorgängen durch
       Datenbindungen und Direktiven. Der Programmierer erspart sich dadurch Codezeilen und Zeit. Zu den sinnvollen Einsatzgebieten von Angular zählen Webseiten mit großteils dynamisch generiertem
@@ -391,32 +397,32 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
         und sieht wie folgt aus:
 
         \lstset{language=html}
-        	\begin{lstlisting}
-            <!DOCTYPE html>
-            <html lang="de">
-              <head>
-                <meta charset="utf-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Titel</title>
-              </head>
-              <body>
-              </body>
-            </html>
-        	\end{lstlisting}
+      	\begin{lstlisting}
+        <!DOCTYPE html>
+        <html lang="de">
+        <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Titel</title>
+        </head>
+        <body>
+        </body>
+        </html>
+        \end{lstlisting}
 
         Ganz oben im Dokument wird der Dokumenttyp deklariert. Dieser gibt die verwendete HTML Version an. Im Falle von HTML 5 würde dieser wie folgt aussehen:
 
         \lstset{language=html}
-        	\begin{lstlisting}
-            <!DOCTYPE html>
-        	\end{lstlisting}
+        \begin{lstlisting}
+        <!DOCTYPE html>
+        \end{lstlisting}
 
         Der Dokumenttyp für HTML 4.01 Strict hingegen wurde wie folgt angegeben:
 
         \lstset{language=html}
-        	\begin{lstlisting}
-            <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-        	\end{lstlisting}
+        \begin{lstlisting}
+        <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+        \end{lstlisting}
 
         Im \textless head \textgreater Bereich werden \textless meta \textgreater Tags angegeben, in denen allgemeine und technische Informationen zur Website, wie Zeichensatz
         und Skalierung bei mobiler Version, oder Keywords und Beschreibung gespeichert werden.
