--- a/Positionierung.tex
+++ b/Positionierung.tex
@@ -59,6 +59,15 @@
     Beim selbstortenden Positionierungssystem bekommt der mobile, bewegliche Empfänger die Daten von verschiedenen Sendern, die sich auf bekannten Positionen befinden. Die Lokalisation des Empfängers wird durch die gemessenen Signale ermittelt. Das Objekt kann sich selbst orten, es ist kein Netzwerk notwendig.\\
     Ein fernortendes Positionierungssystem besteht aus einem mobilen, beweglichen Sender und stationären, unbeweglichen Empfängern. Die Messdaten aller Empfänger werden gesammelt und die Position des Senders wird in der Zentrale berechnet. Hier ist ein Netzwerk notwendig, sämtliche Berechnungen werden durch eine zentrale Instanz ausgeführt.
 
+    \begin{figure}[H]
+      \begin{centering}
+        \subfigure[Colorcode]{\includegraphics[width = 0.4\textwidth]{Bilder/Colorcode}}
+        \subfigure[Objekt]{\includegraphics[width = 0.4\textwidth]{Bilder/bor_selbst_fern}}
+      \par\end{centering}
+      \caption{Selbstortendes und fernortende Lokalisierung}
+      \label{SelbstundFernortend}
+    \end{figure}
+
 
     \subsection*{Genauigkeit}
     Die Genauigkeit gibt an, wie sehr sich gemessene und tatsächliche Position unterscheiden.
