--- a/Kommunikation_Applikation_und_Hexacopter.tex
+++ b/Kommunikation_Applikation_und_Hexacopter.tex
@@ -149,7 +149,7 @@ Damit das Programm mit JDBC arbeiten kann musste es zuerst von Oracle gedownload
 \\ \\
 Wie auch bei Doctrine müssen der Datenbank-Host, der Datenbank-Port und die Benutzerdaten angegeben werden, damit die Verbindung hergestellt werden kann.
 Als Treiber wird hier jedoch statt MySQL auf JDBC verwiesen.
-Um die Verbindung herzustellen wurde auf die Funktion DriverManager.getConnection() aufgerufen. Als Parameter mussten ihr der Pfad zur Datenbank und die Benutzerdaten mitgeschickt werden.
+Um die Verbindung herzustellen wurde die Funktion DriverManager.getConnection() aufgerufen. Als Parameter mussten ihr der Pfad zur Datenbank und die Benutzerdaten mitgeschickt werden.
 \lstset{language = java}
   	\begin{lstlisting}
 private String db_host = "localhost";
@@ -167,10 +167,10 @@ String mySqlUrl = "jdbc:mysql://" + db_host + ":" + db_port + "/"
 verbindung = DriverManager.getConnection(mySqlUrl, db_user, db_pass);
 	\end{lstlisting}
 Damit die Tischdaten angezeigt werden konnten, wurde die "showTischdaten()"-Funktion erstellt. Um die ID, die Tischroute und die Tischnummer zu erhalten musste jeweils ein SQL-Statement verfasst werden. In diesem SQL-Statement wurden nur die Tischdaten, welche einer Bestellung zugeordnet sind ausgelesen.
-Um das Statement anschließend auszuführen, wurde es der vordefinierte Methode "executeQuery()" als Parameter mitgeschickt.
+Um das Statement anschließend auszuführen, wurde es der vordefinierten Methode "executeQuery()" als Parameter mitgeschickt.
 Die Ergebnisse werden in ein ResultSet gespeichert. Danach werden sie in einer Schleife iteriert und der aktuelle Wert aus dem Set als String umgewandelt. Nun konnte die Route als Rückgabewert angegeben werden.
 \\ \\
-Damit in der Bestellungen-Tabelle angemerkt wird, wann die Bestellung ausgeliefert wurde, wurde mit SQL ein Update-Statement erzeugt und mit der vordefinierten "executeUpdate()"-Funktion ausgeführt.
+Damit in der Bestellungen-Tabelle angemerkt wird, wann die Bestellung ausgeliefert wurde, wird mit SQL ein Update-Statement erzeugt und mit der vordefinierten "executeUpdate()"-Funktion ausgeführt.
 \\ \\
 Um in einer extra Datenbanktabelle den Verbindungsstatus zwischen dem Hexacopter und dem Server überprüfen zu können, wird bei jeder Statusänderung die "erstelleDBEintrag()"-Funktion aufgerufen. Das Einfügen von Datenbankeinträgen kann mit einem Insert-Statement erledigt werden. Dieses muss im Anschluss ebenfalls mit der "executeUpdate()"-Methode durchgeführt werden.
 \\ \\
