--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -21,24 +21,23 @@ Das System setzt sich aus den folgenden drei Komponenten zusammen:
 
 \begin{figure}[H]
   \begin{centering}
-  \includegraphics[width = 1\textwidth]{Bilder/systemblockbild.jpg}
+  \includegraphics[width = 0.9\textwidth]{Bilder/systemblockbild.jpg}
   \par\end{centering}
   \caption{Systemblockbild}
   \label{Systemblockbild}
 \end{figure}
 
-Der Multicopter ist die zentrale Komponente des Projekts. Sie ist für den selbstständigen Transport von Objekten zuständig,
+Der Multicopter ist die zentrale Komponente des Projekts. Er ist für den selbstständigen Transport von Objekten zuständig,
 und muss somit flugfähig, und im Stande sein Unfälle zu verhindern. Sensoren, die mittels eigens angefertigter Halterungen
 am Multicopter befestigt sind, kommunizieren mit der Firmware.
 
 Die Firmware regelt alle logischen Prozesse des Systems. Sowohl die Steuerung des Multicopters, als auch der
-Austausch von Daten fällt unter diese Kategorie. Befehle erhält sie unter anderem von der Speisekarte, mit der er über
+Austausch von Daten fällt unter diese Kategorie. Befehle erhält sie unter anderem von der Speisekarte, mit der sie über
 einen Server, beziehungsweise einer weiteren Anwendung kommuniziert.
 
 Die digitale Speisekarte ist indirekt die externe Steuereinheit des Multicopters, und zugleich die Komponente,
 die das System für den Einsatz in der Gastronomie auszeichnet. Sie automatisiert Vorgänge eines gastronomischen
 Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
-\pagebreak
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Ausgangssituation}
@@ -126,8 +125,6 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
       Die {Ambulance Drohne\cite{ambulancedrone}} ist ein Projekt, welches auf der TU Delft entwickelt wird. Das Besondere an dieser Drohne ist, dass sie einen eingebauten Defibrillator hat, welcher
       sich per Fernverbindung von einem Rettungshelfer bedienen lässt, obwohl dieser nicht anwesend ist. Die Ambulance Drohne fliegt mit einer Höchstgeschwindigkeit von bis zu
       100 Stundenkilometer und kann somit, in einem Notfall, schnell die Unfallstelle erreichen.
-
-      \pagebreak
 
       \item \textbf{Gimball}
 
@@ -228,8 +225,6 @@ Das gesamte für den 3D-Druck benötigte Material wurde gesponsert.
 \subsection*{LivingPhotos}
 {LivingPhotos\cite{livingphotos}} ermöglichte uns, unsere Internetauftritte durch professionelle Teamfotos und Portraits aufzuwerten.
 
-\pagebreak
-
 \chapter{Projektmanagement}
 \renewcommand{\kapitelautor}{Autor: Markus Kaiser}
 
@@ -317,8 +312,6 @@ Zusammenfassung umformuliert worden.
 
   Das Ziel der Diplomarbeit ist es, dass das konzeptionierte System
   funktionsfähig umgesetzt ist.
-
-  \pagebreak
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Management-Methode}
