--- a/diplomarbeit.tex
+++ b/diplomarbeit.tex
@@ -381,7 +381,7 @@ DI Franz Temper, die dem Projektteam als Ansprechpersonen für besondere Fragest
 sind.
 
 Nicht zuletzt möchten wir unseren Dank unseren Partnern und Sponsoren, ganz besonders der GRZ IT Center GmbH
-ausdrücken, da wir die Diplomarbeit nicht ohne die Unterstützung in diesem Rahmen umsetzen hätten können.
+ausdrücken, da wir die Diplomarbeit ohne ihre Unterstützung nicht in diesem Rahmen umsetzen hätten können.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %Verzeichnisse -- machen wir mit fancy headern
