--- a/Marketing.tex
+++ b/Marketing.tex
@@ -5,21 +5,21 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Allgemein}
 Im folgenden Kapitel wird beschrieben, mit welchen Mitteln und mit welcher Effektivität
-das Projekt Hovering Steward vermarktet wurde. Unter anderem werden diverse Marktanalysen
+das Projekt Hovering Steward vermarktet wurde. Unter anderem werden diverse Marktanalysen,
 aber auch Marketing-Strategien und deren Anwendung erläutert.
 
   \subsection{Marktanalysen}
     \subsection*{SWOT-Analyse}
-    Mithilfe der SWOT-Analyse wird der aktuelle Zustand eines Unternehmens, oder in unserem Fall Projektes, analysiert um anschließend eine von vier möglichen Strategien
+    Mithilfe der SWOT-Analyse wird der aktuelle Zustand eines Unternehmens, oder in unserem Fall Projekts, analysiert, um anschließend eine von vier möglichen Strategien
     für den weiteren Verlauf des Unternehmens zu erarbeiten. Es werden Stärken, Schwächen, Möglichkeiten und Risiken evaluiert, wobei sich jeweils Stärken und Schwächen, und
-    Möglichkeiten und Risiken gegenüberstehen. Die vier Begriffe auf englisch übersetzt \textbf{S}trengths, \textbf{W}eaknesses, \textbf{O}pportunities und \textbf{R}isks
+    Möglichkeiten und Risiken gegenüberstehen. Die vier Begriffe, auf englisch übersetzt \textbf{S}trengths, \textbf{W}eaknesses, \textbf{O}pportunities und \textbf{R}isks,
     ergeben dadurch das Akronym SWOT.
 
     \begin{figure}[H]
       \begin{centering}
       \includegraphics[width = 1\textwidth]{Bilder/swot.jpg}
       \par\end{centering}
-      \caption[SWOT-Analyse Grafik]{SWOT-Analyse Grafik\cite{pic_swot}}
+      \caption[SWOT-Analyse]{SWOT-Analyse\cite{pic_swot}}
       \label{swot}
     \end{figure}
 
@@ -73,7 +73,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
       Gewinne erbracht hat, ist es ratsam zu überlegen, ob weiter investiert, oder die Produktion gestoppt wird.
 
       \item Als \textbf{Questionmarks} werden die Produkte bezeichnet, bei denen sich noch nicht eindeutig gezeigt hat, in welche Richtung sie sich entwickeln werden.
-      Es steht offen ob sie zu einem Superstar, oder einem Poor Dog werden. Diese Tatsache macht es schwer zu entscheiden, ob weiter in sie investiert, oder das Produkt
+      Es steht offen, ob sie zu einem Superstar oder einem Poor Dog werden. Diese Tatsache macht es schwer zu entscheiden, ob weiter in sie investiert, oder das Produkt
       verkauft wird.
     \end{itemize}
 
@@ -90,15 +90,15 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     \end{figure}
 
   \subsection{Marketing-Strategie}
-  Aus der SWOT-Analyse ging hervor, dass unsere Schwächen großteils darin lagen, unser Projekt nur schwer präsentieren zu können, da das Hauptziel das Entwickeln
+  Aus der SWOT-Analyse ging hervor, dass die Schwächen des Projekts großteils darin lagen, es nur schwer präsentieren zu können, da das Hauptziel das Entwickeln
   einer Konzeptstudie, keines fertigen Produktes ist. Außerdem ergaben Kostenabschätzungen, dass das Testen der Konzepte einen hohen finanziellen Aufwand mit sich bringen
-  würde. Aus diesen beiden Erkenntnissen entstand das Vorhaben, das Projekt sehr aktiv an die Öffentlichkeit zu bringen, um zum einen zu intensiv Fortschritte im Projekt
-  für Außenstehende als ersichtlich zu gestalten und zum anderen dadurch in Kontakt mit potentiellen Sponsoren und Partner zu geraten, und folglich das Budget des Projekts
-  decken zu können. Diese Vorgehensweise fällt unter die Kategorie der WT-Strategie, auf Basis der SWOT-Analyse.
+  würde. Aus diesen beiden Erkenntnissen entstand das Vorhaben, das Projekt sehr aktiv an die Öffentlichkeit zu bringen, um zum einen Fortschritte im Projekt
+  für Außenstehende als ersichtlich zu gestalten, und zum anderen dadurch in Kontakt mit potentiellen Sponsoren und Partner zu geraten, und folglich das Budget des Projekts
+  zu decken. Diese Vorgehensweise fällt unter die Kategorie der WT-Strategie, auf Basis der SWOT-Analyse.
 
     \subsection*{Corporate Design}
     Um einen professionellen Eindruck bei Internetauftritten und Events zu vermitteln, wurde ein Corporate Design entwickelt.
-    Das Corporate Design diente als Guideline für das gestalten jeglicher visueller Verweise auf die Diplomarbeit Hovering Steward.
+    Das Corporate Design diente als Guideline für das Gestalten jeglicher visueller Verweise auf die Diplomarbeit Hovering Steward.
     Es wurden Eigenschaften für das Logo, bestimmte Farben und zu verwendende Fonts festgelegt.
     Somit war es möglich dem Projekt ein einheitliches Auftreten in der Öffentlichkeit, und damit einen Wiedererkennungswert zu verleihen.
 
@@ -117,19 +117,19 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     \end{figure}
 
     \subsection*{Blog}
-    Der Blog war die wichtigste Komponente für das Veröffentlichen von akuellen Informationen. Es wurde Wert darauf gelegt,
-    in regelmäßgen Abständen, aktuelle Inhalte über den Projektverlauf zu veröffentlichen. Die Zielgruppe waren primär junge TechnikerInnen,
-    die sich für Drohnen, oder allgemein für Robotik interessierten. Alles zur Entwicklung des Blogs ist in Kapitel 1.3 angeführt.
+    Der Blog war die wichtigste Komponente für das Veröffentlichen von akuellen Informationen. Es wurde Wert darauf gelegt
+    in regelmäßgen Abständen aktuelle Inhalte über den Projektverlauf zu veröffentlichen. Die Zielgruppe waren primär junge Techniker,
+    die sich für Drohnen, oder allgemein für Robotik interessierten. Alles zur Entwicklung des Blogs ist in Kapitel 3.3 angeführt.
 
     \subsection*{Wettbewerbe}
-    Hovering Steward hat an einer Vielzahl an Wettbewerben teilgenommen, auf welche im Kapitel Public Relations näher eingegangen wird.
+    Hovering Steward hat an einigen Wettbewerben teilgenommen, auf welche im Kapitel 3.2 näher eingegangen wird.
     Folgende Vorteile waren eine Motivation, eine Bewerbung für diese einzuschicken:
 
     \begin{itemize}
       \item \textbf{Teamdynamik}
 
       Bei einer Präsentation vor fremdem Publikum war ein professionelles Auftreten, gute Planung und vorallem Koordination gefragt.
-      Diese Auftritte wurden als Chancen genutzt, die Dynamik im Team weiterzuentwickeln, als auch Präsentationstechniken für
+      Diese Auftritte wurden sowohl als Chancen genutzt, die Dynamik im Team weiterzuentwickeln, als auch Präsentationstechniken für
       die Endpräsentation zu trainieren.
 
       \item \textbf{Unterstützung}
@@ -139,7 +139,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
 
       \item \textbf{Marketing}
 
-      Nicht zuletzt waren Wettbewerbe ein wichtiger Teil des Marketings, da sich unsere Idee nicht nur durch Präsentationen verbreiten ließ,
+      Nicht zuletzt waren Wettbewerbe ein wichtiger Teil des Marketings, da sich die Projektidee nicht nur durch Präsentationen verbreiten ließ,
       sondern auch in den Sozialen Medien und auf den Webseiten der Veranstalter erwähnt wurde.
 
     \end{itemize}
@@ -152,44 +152,43 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
 
     \subsection*{Jugend Innovativ}
     {JugendInnovativ\cite{jugendinnovativ}} ist einer der bekanntesten Bewerbe, die Schul- und Diplomarbeitsprojekte
-    unterstützten. Wie der Name schon sagt, legt die Jury hierbei sehr großen Wert auf den innovativen
-    Aspekt der Projektidee. Zu diesem Zweck haben wir eine eigene Executive Summary verfasst, die nicht
-    nur auf den technischen Hintergründen basiert, sondern hervorhebt, was unser Projekt einzigartig
-    macht. Unser Team hat das Halbfinale von JugendInnovativ erreicht, und somit eine finanzielle Unterstützung
+    unterstützen. Wie der Name schon sagt, legt die Jury hierbei sehr großen Wert auf den innovativen
+    Aspekt der Projektidee. Zu diesem Zweck haben wurde eine umfangreiche Executive Summary verfasst, die nicht
+    nur auf den technischen Hintergründen basiert, sondern hervorhebt, was das Projekt einzigartig
+    macht. Das Team hat das Halbfinale von JugendInnovativ erreicht, und somit eine finanzielle Unterstützung
     zugesagt bekommen.
 
     \subsection*{Bosch - Technik fürs Leben Preis}
-    Die Bosch-Gruppe Österreich ist Initiator des jährlichen Wettbewerbs {"Technik fürs Leben"\cite{bosch}}. Es werden Österreichs
+    Die Bosch-Gruppe Österreich ist Initiator des jährlichen Wettbewerbs {"Technik fürs Leben"\cite{bosch}}. Es werden österreichs
     größte Talente des technisch orientierten Nachwuchses gesucht. Projekte werden von einer Experten-Jury bewertet,
-    der Hauptpreis is das Angebot für ein Praktikum bei der Bosch Gruppe Österreich.
+    der Hauptpreis is das Angebot für ein Praktikum bei der Bosch-Gruppe Österreich.
 
     \subsection*{Accenture HTL Challenge}
-    Der Managementberatungs-, Technologie- und Outsourcing Dienstleister {Accenture\cite{accenture}} veranstalten jedes Jahr die Accenture HTL Challenge,
+    Der Managementberatungs-, Technologie- und Outsourcing Dienstleister {Accenture\cite{accenture}} veranstaltet jedes Jahr die Accenture HTL Challenge,
     bei der Projekte und Diplomarbeiten von technischen Schulen, rund um das Thema Informationstechnologie gesucht werden.
     Die Teams treten durch Präsentationen vor einer Jury gegeneinander an. Neben dem Wettbewerb werden den Teilnehmern außerdem
-    Unterstützungen wie Coachings und Beratungen von Experten angeboten. Aufgrund des Umfangs dieses Wettbewerbs haben wir uns entschieden an diesem teilzunehmen,
-    um das Projekt auch hier an die Öffentlichkeit zu bringen und bei Gelegenheit Kontakte zu knüpfen. Hovering Steward schaffte es ins Finale der
+    Unterstützungen wie Coachings und Beratungen von Experten angeboten. Aufgrund des Umfangs dieses Wettbewerbs wurden die erforderlichen Bewerbungsunterlagen eingesendet,
+    um das Projekt auch hier an die Öffentlichkeit zu bringen, und bei Gelegenheit Kontakte zu knüpfen. Hovering Steward schaffte es ins Finale der
     Accenture HTL Challenge.
 
     \subsection*{ITs Project Award}
     Der {ITs Project Award\cite{its}} ist ein Event der FH Salzburg. Projekte und Diplomarbeiten aus den Bereichen Informations- und Kommunikationstechnologie
     können eingereicht werden, aufsteigende Teams treten in einem Finale gegeneinander an und müssen ihr Projekt präsentieren. Bewertet werden die
-    Teams von einer Expertenjury nach Kriterien wie Kreativität, Innovationsaspekt oder wirtschaftlicher Relevanz.
+    Teams von einer Experten-Jury nach Kriterien wie Kreativität, Innovationsaspekt oder wirtschaftlicher Relevanz.
     Auch in diesem Bewerb erreichte Hovering Steward das Finale.
 
     \subsection*{Invasion der Drohnen}
-    Zu Begin der Diplomarbeit haben wir versucht möglichst viel über die Entwicklung und den Einsatz von Drohnen zu erfahren.
+    Zu Begin der Diplomarbeit wurde versucht möglichst viel über die Entwicklung und den Einsatz von Drohnen zu erfahren.
     Der Vortrag {Invasion der Drohnen\cite{invasionderdrohnen}}, mit anschließender Diskussion zum Thema "Entwicklung von Drohnen, Einsatzgebiete und rechtliche Einschränkungen" brachte
-    uns viele neue Informationen, wie der Umgang mit unbemannten Flugobjekten, speziell in Österreich gehandhabt werden.
+    viele neue Informationen, wie der Umgang mit unbemannten Flugobjekten, speziell in Österreich gehandhabt werden.
 
     \subsection*{European Conference on Educational Robotics}
-    Über den Wettbewerb Accenture sind wir mit dem Leiter des {European Conference on Educational Robotics\cite{ecer}} in Kontakt gekommen.
-    "Die European Conference on Educational Robotics (ECER) ist eine internationale wissenschaftliche Konferenz für SchülerInnen. WissenschaftlerInnen
-    geben mit Vorträgen Einblick in ihre Forschung, führen Roboter live vor und sind Punkterichter bei spannenden Robotik-Bewerben, darunter die
-    offiziellen Botball Bewerbe Europas und unser PRIA-Open. Teilnehmende Teams präsentieren ihre Roboter, Projekte und Erfahrungen nach wissenschaftlichem
+    Über den Wettbewerb Accenture wurde Kontakt mit dem Leiter {European Conference on Educational Robotics\cite{ecer}} hergestellt.
+    "Die European Conference on Educational Robotics (ECER) ist eine internationale, wissenschaftliche Konferenz für Schüler. Wissenschaftler
+    geben mit Vorträgen Einblick in ihre Forschung, führen Roboter live vor und sind Punkterichter bei spannenden Robotikbewerben.
+    Teilnehmende Teams präsentieren ihre Roboter, Projekte und Erfahrungen nach wissenschaftlichem
     Vorbild in englischer Sprache."
     Von unserem Auftritt und unserer Idee überzeugt, wurden wir von dem Leiter der ECER eingeladen, unser Projekt zu präsentieren.
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Blog}
@@ -199,7 +198,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
 
   \subsection{Technische Planung}
   Der folgende Abschnitt umfasst alles, von den ersten Gedanken der technischen Planung, sowie der Umsetzung,
-  des, für das Projekt Hovering Steward programmierten Blogs.
+  des, für das Projekt programmierten Blogs.
 
     \subsection*{Überlegungen}
     Es stellte sich bereits früh im Projekt heraus, dass die Fertigstellung eines komplexen Vorhabens wie diesem, nicht in
@@ -222,7 +221,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
 
     Zu den meist genutzten Content Management Systemen am Markt zählen unter anderem die Open-Source-CMS {TYPO3\cite{typo3}},
     {Wordpress\cite{wordpress}} oder {Drupal\cite{drupal}}. Der Grund, warum keines dieser Content Management Systeme für die
-    Entwicklung des Blogs gewählt wurde ist in Kapitel 3.3.6 Eigene Erfahrungen vermerkt.
+    Entwicklung des Blogs gewählt wurde ist in Kapitel 3.3.5 vermerkt.
 
     \subsection*{Mockups}
     Die Überlegungen bezüglich des Designs des Blogs unterschieden sich stark zwischen den ersten
@@ -231,15 +230,15 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
     Die Wahl der Farben basierte ursprünglich auf einer Studie der deutschen Schriftstellerin Eva Heller,
     die mit ihrem Buch {"Wie Farben wirken"\cite{WieFarbenWirken}} analysierte, welche Farbtöne von einem Großteil der Menschen
     mit welcher Eigenschaft verbunden werden. Der Fokus von Hovering Steward lag darin, die zwei Begriffe "Hunger"
-    und "Appetit" möglichst gut zu vermitteln. Das Resultat war eine Kombination der Farben Braun, Gelb und Rosa
+    und "Appetit" möglichst gut zu vermitteln. Das Resultat war eine Kombination der Farben Braun, Gelb und Rosa, die mit diesen beiden Begriffen
     assoziiert wurden. Den Blog mithilfe dieser Farbkombination zu gestalten erschien jedoch nicht passend, weswegen
     ein zweiter Ansatz notwendig war.
 
     Die Überlegung den Blog gleich wie die digitale Speisekarte zu gestalten führte dazu, Elemente, die an ein Restaurant
     erinnern einzubinden. Dies führte zu der Idee, einen Holztisch im Hintergrund abzubilden.
-    Damit das Design trotzdem einen modernen Eindruck macht wurde für die Darstellung von Inhalten ein {"Flat Design"\cite{FlatDesign}}
+    Damit das Design trotzdem einen modernen Eindruck macht, wurde für die Darstellung von Inhalten ein {"Flat Design"\cite{FlatDesign}}
     herangezogen. Das Flat Design zeichnet sich vor allem durch sehr vereinfache Gestaltung, grelle Farben und zweidimensionale Abbildungen aus.
-    Es ist auf optimale Usability, also verständliche und einfache Nutzung ausgelegt.
+    Es ist auf optimale Usability, also verständliche und einfache Nutzung, ausgelegt.
 
     Das Endresultat war folgendes:
 
@@ -254,7 +253,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
     \subsection*{Frameworks}
     Für die Entwicklung des Blogs erschien der Einsatz eines Frameworks als sehr hilfreich. Das Framework sollte komplexe Methoden wie
     Datenbankzugriffe oder Formularvalidierungen vereinfacht zur Verfügung stellen. Für bessere Übersicht während der Entwicklung war es außerdem
-    wichtig, dass das Framework auf dem MVC-Schema aufbaut. Eine Recherche ergab folgende Frameworks als mögliche
+    wichtig, dass das Framework auf dem MVC-Schema aufbaut. Dieses Schema wird in Kapitel 4.2.1 erklärt. Eine Recherche ergab folgende Frameworks als mögliche
     Optionen:
 
     \begin{itemize}
@@ -274,7 +273,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
     ersichtlichen Vorteile, die zu Verwendung in diesem Projekt geführt haben, erläutert.
 
       \subsubsection*{HTML}
-      Die {\textbf{H}yper \textbf{T}ext \textbf{M}arkup \textbf{L}anguage\cite{html}} ist eine gängige Auszeichnungssprache, die verwendet wird um Dokumente mit Text und Medien zu strukturieren.
+      Die {\textbf{H}yper \textbf{T}ext \textbf{M}arkup \textbf{L}anguage\cite{html}} ist eine gängige Auszeichnungssprache die dazu verwendet wird, Dokumente mit Text und Medien zu strukturieren.
       Ein HTML-Dokument ist das Grundgerüst einer Website. Ein Webbrowser interpretiert
       HTML und visualisiert dadurch die Website. Die Syntax von HTML besteht aus sogenannten Tags, die, nach einem
       bestimmten Schema aufgebaut, die Struktur einer Website ergeben. Die aktuelle Version ist HTML 5. Diese unterstützt zum einen das responsive
@@ -287,7 +286,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
       zu ändern. Ein großer Vorteil von JavaScript ist, dass durch das Einbinden von, auf JavaScript basierenden Bibliotheken, ganz leicht eine Vielzahl von zusätzlichen Funktionen
       verwendet werden können.
 
-      JavaScript ist nachwievor die am weitesten verbreitetste Skriptsprache, die am Client verarbeitet wird. Es wird stark unterstützt, wodurch auch einfach Hilfestellungen im Netz
+      JavaScript ist nachwievor die am weitesten verbreitetste Skriptsprache für Webanwendungen, die am Client verarbeitet wird. Sie wird stark unterstützt, wodurch auch einfach Hilfestellungen im Netz
       gefunden werden können. Es gab daher keinen Grund, eine Alternative zu JavaScript in Betracht zu ziehen.
 
       Ein gutes Beispiel, und zugleich auch eine, für den Blog verwendete Bibliothek ist {jQuery\cite{jquery}}.
@@ -317,15 +316,15 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
       var items = $("#navbar-list li");
     	\end{lstlisting}
 
-      Eine derzeit weit verbreitetes JavaScript Framework ist {AngularJS\cite{angular}}. Die Intention dieses Frameworks ist die Automatisierung von oft verwendeten Vorgängen durch
+      Eine derzeit sehr aktuelles JavaScript Framework ist {AngularJS\cite{angular}}. Die Intention dieses Frameworks ist die Automatisierung von oft verwendeten Vorgängen durch
       Datenbindungen und Direktiven. Der Programmierer erspart sich dadurch Codezeilen und Zeit. Zu den sinnvollen Einsatzgebieten von Angular zählen Webseiten mit großteils dynamisch generiertem
       Inhalt oder auch "Single Page Applikations", Webseiten die einmal geladen werden und dann nur zwischen Inhalten wechseln, ohne diese neu zu laden. Das Framework in Kombination mit dem PHP
       Framework CodeIgniter zu verwenden, bedeutete jedoch eine flache Lernkurve. Der Blog war zudem nicht als "Single Page Applikation" geplant, wodurch sich die Verwendung von AngularJS nicht rentiert hätte.
 
       \subsubsection*{CSS}
       {CSS\cite{css}} steht für \textbf{C}ascading \textbf{S}tyle \textbf{S}heets. Wie das Wort "Style" bereits offenbart, wird sie für das visuelle Aufbereiten einer Website verwendet.
-      Allgemein ist CSS eine Gestaltungssprache und wird in Kombination mit HTML-Dokumenten verwendet. In HTML werden dafür den DOM-Elementen Klassen oder IDs
-      zugewiesen, über die CSS dann beliegige Eigenschaften zuweisen kann. Dabei orientiert sich CSS nach dem sogenannten Box-Modell. In diesem werden HTML-Elemente
+      Allgemein ist CSS eine Gestaltungssprache und wird in Kombination mit HTML-Dokumenten verwendet. In HTML werden dafür den Tags Klassen oder IDs
+      zugewiesen, über die CSS dann bestimmte Eigenschaften zuweisen kann. Dabei orientiert sich CSS nach dem sogenannten Box-Modell. In diesem werden HTML-Elemente
       zwischen Inline-Elementen und Block-Elemente unterschieden. Inline-Elemente passen sich dem Fluss in der Struktur des Dokuments an, Block-Elemente hingegen
       werden für das Layout der Website verwendet. Von einfachen Formatierungen wie der Schriftgröße oder einer Hintergrundfarbe lassen sich mit CSS komlexe Animationen,
       ohne die Verwendung von JavaScript durchführen. Letzteres ist jedoch erst seit der Version CSS3 möglich.
@@ -443,7 +442,7 @@ auch allgemeine Überlegungen wie der Einsatz eines Content Management Systems b
 
         Bei Links werden sowohl Links, die auf die Website verweisen, als auch Links, die auf andere Seiten zeigen bewertet.
         Zeigen sehr viele externe Links auf eine Seite, interpretiert der Robot diese als geläufig und sie erhält eine höhere Wertung. In unserem Fall war die Kombination mit anderen sozialen
-        Medien sehr hilfreich, da durch Veröffentlichungen auf diesen automatisch Links auf unseren Blog generiert werden.
+        Medien sehr hilfreich, da durch Veröffentlichungen auf diesen automatisch Links auf den Blog generiert werden.
 
         Links, die von der eigenen Seite auf andere verweisen stellen jedoch einen Nachteil dar, da der Robot dem Link folgen könnte, statt die eigene Seite weiter zu inspizieren. Möchte man dies
         verhindern, kann dem \textless a \textgreater Tag das Attribut rel="nofollow" hinzugefügt werden, um dem Robot zu sagen, dass er diesem Link nicht folgen soll.
